<resources>
    //START
    <string name="app_name">ForEvents</string>
    <string name="start_tv">Miles de eventos están ocurriendo a tu alrededor, no te los pierdas.</string>
    <string name="start_button">Crear una cuenta</string>
    <string name="question_account_tv">¿Ya tienes una cuenta?</string>
    <string name="login_tv">Iniciar sesión</string>

    //LOGIN Y SIGNUP
    <string name="loginFE_tv">Iniciar sesión en ForEvents.</string>
    <string name="login_button">Inicia sesión</string>
    <string name="email_et">Email</string>
    <string name="password_et">Contraseña</string>
    <string name="question_signup_tv">¿Aún no tienes cuenta? Registrate</string>
    <string name="question_forget_password_tv">¿Olvidaste tu contraseña?</string>

    <string name="signupFE_tv">Crea tu cuenta</string>
    <string name="reset_tv">Recuperar contraseña</string>
    <string name="preference_tv">Selecciona las categorias que te interesan</string>
    <string name="signup_button">Registrarse</string>
    <string name="reset_button">Restablecer contaseña</string>
    <string name="personal_tv">Personal</string>
    <string name="username_et">Nombre de usuario</string>
    <string name="name_et">Nombre</string>
    <string name="event_recommendation">Eventos recomendados</string>
    <string name="event_follow">Eventos que persigues</string>


    //VARIOS
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="search_user_et">Buscar...</string>
    <string name="saved_events_tv">Eventos guardados</string>
    <string name="forevents_info">Acerca de ForEvents</string>
    <string name="memory_events_tv">Momentos personales</string>
    <string name="help_tv">Centro de ayuda</string>
    <string name="comentario_tv">Comentarios</string>
    <string name="edit_profile_tv">Editar perfil</string>
    <string name="perfil_tv">Perfil</string>
    <string name="notifications_tv">Notificaciones</string>
    <string name="agend_tv">Mi Agenda</string>
    <string name="save_button">Guardar</string>
    <string name="change_photo_tv">Cambiar foto de perfil</string>
    <string name="bio_et">Biografía</string>
    <string name="publico_rb">Público</string>
    <string name="privado_rb">Privado</string>
    <string name="followers_tv">Seguidores</string>
    <string name="no_events_tv">No has creado ningún evento, comparte tu próximo evento en ForEvents</string>
    <string name="no_events_attend_tv">No has asistido a ningún evento, explora para encontrar eventos que te interesen</string>
    <string name="no_events_follow">No persigues ningún evento, explora para encontrar eventos que te interesen</string>
    <string name="no_notification">No hay notificaciones...</string>
    <string name="no_calendar">No hay eventos programados...</string>
    <string name="tendencias">Tendencias</string>
    <string name="tipo_tv">Tipo de Evento: </string>
    <string name="enviar_tv">Enviar</string>
    <string name="mensaje">Mensaje...</string>
    <string name="add_comment">Añade tu comentario...</string>
    <string name="preferencias">Preferencias</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="general">General</string>
    <string name="otros">Otros</string>
    <string name="idioma">Idioma</string>
    <string name="eventos">Eventos</string>
    <string name="seguidores">Seguidores</string>
    <string name="asistir">Asistir</string>
    <string name="informacion">Información</string>
    <string name="opiniones">Opiniones</string>
    <string name="comienza">COMIENZA:</string>
    <string name="finaliza">FINALIZA:</string>
    <string name="aceptar_min">aceptar</string>
    <string name="rechazar_min">rechazar</string>
    <string name="username">username</string>
    <string name="fullname">Full Name</string>
    <string name="seguir">seguir</string>
    <string name="invitar">invitar</string>
    <string name="hora">HORA</string>
    <string name="aforo">AFORO:</string>
    <string name="ubicacion">UBICACIÓN:</string>
    <string name="descripcion">Descripción del evento:</string>
    <string name="siguiendo">Siguiendo</string>
    <string name="change_pwd">Cambiar contraseña</string>
    <string name="remove_user">Eliminar Cuenta</string>
    <string name="editar_ev">Editar Evento</string>
    <string name="compartir">Compartir Evento</string>
    <string name="denunciar">Denunciar Evento</string>
    <string name="eliminar_ev">Eliminar Evento</string>
    <string name="inicio_seguridad">Inicio de sesión y seguridad</string>
    <string name="bienvenido_help">Bienvenido al centro de ayuda de ForEvents</string>
    <string name="problema_tv">Envianos tu problema y nuestro equipo técnico hará lo posible para ayudarte: </string>
    <string name="info_forevents">ForEvents es una aplicación asociada a la realización de un TFG, que persigue mostrar y recomendar eventos a los usuarios que la utilicen.</string>

    //ADD EVENTO
    <string name="add_event_button">Añadir Evento</string>
    <string name="accept_button">Aceptar</string>
    <string name="image_event_tv">Añade el cartel del evento</string>
    <string name="name_event_tv">Titulo del evento</string>
    <string name="description_event_tv">Descripcion del evento...</string>
    <string name="fecha_ini_event_et">Fecha de inicio</string>
    <string name="hora_ini_event_et">Hora de inicio</string>
    <string name="fecha_fin_event_et">Fecha de fin</string>
    <string name="hora_fin_event_et">Hora de fin</string>
    <string name="ubicacion_event_tv">Ubicacion del evento</string>
    <string name="aforo_event_tv">Aforo del evento</string>
    <string name="tematica_event_tv">Tematica del evento</string>
    <string name="tipo_event_tv">Tipo del evento</string>
    <string name="configuracion_tv">Configuración y privacidad</string>
    <string name="cuenta_tv">Cuenta</string>
    <string name="setting_tv">Está configuracion afectará a todas las cuentas de ForEvents en este dispositivo</string>
    <string name="logout_tv">Cerrar sesión</string>


    <string name="filtro_tv">Filtro de Búsqueda</string>
    <string name="categorias">Categorias</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="deshacer">Deshacer</string>




    <string-array name="tematica_spinner">
        <item>Acádemico</item>
        <item>Comunitario</item>
        <item>Cultural</item>
        <item>Deportivo</item>
        <item>Empresarial</item>
        <item>Ocio</item>
        <item>Politico</item>
        <item>Social</item>
    </string-array>


</resources>
