<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_opciones">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_usuario"
        android:title="@string/perfil_tv" />
    <item
        android:id="@+id/nav_save_events"
        android:icon="@drawable/ic_save"
        android:title="@string/saved_events_tv" />

    <item
        android:id="@+id/nav_personal_events"
        android:icon="@drawable/ic_personal_moments"
        android:title="@string/memory_events_tv" />
    </group>



    <group
        android:id="@+id/menu_ajustes">
        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/ic_config"
            android:title="@string/configuracion_tv" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help_tv" />
    </group>






</menu>