<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserOptionsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/bar"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:id="@+id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ic_back"
                    android:src="@drawable/ic_back"
                    android:background="?android:attr/windowBackground"
                    android:layout_margin="10dp"
                    android:layout_centerVertical="true"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cuenta_tv"
                    android:text="@string/cuenta_tv"
                    android:maxLines="1"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack" />


                <Button
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_style_follow"
                    android:textColor="@color/colorPrimary"
                    android:textAllCaps="false"
                    android:text="@string/save_button"
                    android:textStyle="bold"
                    android:id="@+id/button_save_edit_profile"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/bar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/inicio_seguridad"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"/>



        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/username"
            android:hint="@string/username_et"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/email"
            android:hint="@string/email_et"
            app:met_floatingLabel="normal" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/bio"
            android:hint="@string/bio_et"
            app:met_floatingLabel="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/change_pwd"
            android:textColor="@color/colorBlack"
            android:id="@+id/change_password"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/otros"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/logout_tv"
            android:textColor="@color/colorBlack"
            android:id="@+id/logout"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/darker_gray"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/delete_account"
            android:text="@string/remove_user"
            android:textColor="@color/colorRed"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"/>


    </LinearLayout>

</RelativeLayout>