<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/bar"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:id="@+id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ic_back"
                    android:src="@drawable/ic_back"
                    android:background="?android:attr/windowBackground"
                    android:layout_margin="10dp"
                    android:layout_centerVertical="true"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/configuracion_tv"
                    android:text="@string/configuracion_tv"
                    android:maxLines="1"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/bar">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/personal_tv"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cuenta_tv"
            android:id="@+id/cuenta_btn"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/preferencias"
            android:text="@string/preferencias"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <CheckBox
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/notificaciones"
            android:id="@+id/notificacion_ch"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/general"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/forevents_info"
            android:id="@+id/acerca"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings"
            android:text="@string/setting_tv"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="12sp"/>

    </LinearLayout>




</RelativeLayout>